--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "dependencies": {
         "express": "^4.4.3",
         "logfmt": "^1.1.2",
-        "twitter": "^0.2.9"
+        "ntwitter": "^0.5.0"
     },
     "engines": {
         "node": "0.10.x"
