--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "express": "^4.4.3",
     "logfmt": "^1.1.2",
+    "newrelic": "^1.8.0",
     "node-wolfram": "0.0.1",
     "ntwitter": "^0.5.0",
     "twit": "^1.1.15"
