--- a/package.json
+++ b/package.json
@@ -23,9 +23,10 @@
   "dependencies": {
     "express": "^4.4.3",
     "logfmt": "^1.1.2",
+    "money": "^0.2.0",
     "newrelic": "^1.8.0",
     "node-wolfram": "0.0.1",
-    "ntwitter": "^0.5.0",
+    "open-exchange-rates": "^0.3.0",
     "twit": "^1.1.15"
   },
   "engines": {
